# VSTIR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  run.sh
assets/models/: CornellBox-Sphere.mtl
assets/scenes/: dragon.yaml  sample_scene.yaml
shaders/: CMakeLists.txt  Makefile  cmake_install.cmake  combine_components.comp  compile.comp  denoise.comp  haar_horizontal.comp  haar_vertical.comp  inv_haar_horizontal.comp  inv_haar_vertical.comp  merge.comp  render.comp  resevoir.comp  separate_components.comp  sort_iteration.comp  spacial.comp  sync_buffers.comp  temporal.comp  threshold.comp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/core/: Camera.cpp  Camera.h  camera.cpp  camera.h  editor.cpp  editor.h  get.h  keybinds.h  renderer.cpp  renderer.h  scene_loader.cpp  scene_loader.h  ui.cpp  ui.h
src/denoising/: README.md  build.sh  denoise  denoise_main.cpp  denoiser.cpp  denoiser.h
src/util/: bvh.cpp  bvh.h  file.cpp  file.h  log.h  safety.h
src/vulkan/: backend.cpp  backend.h  vcontext.cpp  vcontext.h  vcore.cpp  vcore.h  vdata.cpp  vdata.h  vgeneral.cpp  vgeneral.h  vmetadata.cpp  vmetadata.h  vscheduler.cpp  vscheduler.h  vshaders.cpp  vshaders.h  vstructs.h  vutil.cpp  vutil.h
